--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,21 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ably/laravel-broadcaster": "^1.0",
+        "aws/aws-sdk-php-laravel": "^3.8",
+        "doctrine/dbal": "^3.7",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/breeze": "^1.25",
+        "laravel/folio": "^1.1",
         "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/sanctum": "^3.3",
+        "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.0",
+        "livewire/volt": "^1.3"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.9",
+        "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
