--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,8 @@ yarn-error.log
 /.idea
 /.vscode
 /.git
-composer.lock
+/package-lock.json
+/composer.lock
+/.phpstorm.meta.php
+/_ide_helper.php
+/_ide_helper_models.php
