--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "autoprefixer": "^10.4.2",
-        "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.8.0",
+        "axios": "^1.5",
+        "laravel-vite-plugin": "^0.8",
         "postcss": "^8.4.6",
-        "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0"
+        "tailwindcss": "^3.3",
+        "vite": "^4.0"
+    },
+    "dependencies": {
+        "@ably/laravel-echo": "^1.0.3",
+        "ably": "^1.2.45"
     }
 }
