--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,16 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
         "ext-pdo": "*",
         "ably/laravel-broadcaster": "^1.0",
-        "aws/aws-sdk-php":  "3.297.0",
+        "aws/aws-sdk-php": "3.297.0",
         "aws/aws-sdk-php-laravel": "^3.8",
         "doctrine/dbal": "^3.7",
         "guzzlehttp/guzzle": "^7.2",
@@ -18,7 +21,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
-        "livewire/volt": "^1.0"
+        "livewire/volt": "^1.0",
+        "vientodigital/laravel-forum": "@dev"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
@@ -36,7 +40,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Vientodigital\\LaravelForum\\": "vendor/vientodigital/laravel-forum/src/"
         }
     },
     "autoload-dev": {
@@ -44,6 +49,15 @@
             "Tests\\": "tests/"
         }
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../../Git/laravel-forum",
+            "options": {
+                "symlink": true
+            }
+        }
+    ],
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
