--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         "aws/aws-sdk-php-laravel": "^3.8",
         "dimimo/pool-forum": "@dev",
         "doctrine/dbal": "^3.7",
+        "filament/filament": "^3.2",
         "filament/forms": "^3.2",
+        "filament/notifications": "^3.2",
+        "filament/tables": "^3.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "^1.25",
         "laravel/folio": "^1.1",
