--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,7 @@
         "ably/laravel-broadcaster": "^1.0",
         "aws/aws-sdk-php": "3.297.0",
         "aws/aws-sdk-php-laravel": "^3.8",
-        "dimimo/pool-forum": "@dev",
         "doctrine/dbal": "^3.7",
-        "filament/filament": "^3.2",
-        "filament/forms": "^3.2",
-        "filament/notifications": "^3.2",
-        "filament/tables": "^3.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "^1.25",
         "laravel/folio": "^1.1",
@@ -44,8 +39,7 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/",
-            "Dimimo\\PoolForum\\": "vendor/dimimo/pool-forum/src/"
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
@@ -53,21 +47,12 @@
             "Tests\\": "tests/"
         }
     },
-    "repositories": [
-        {
-            "type": "path",
-            "url": "D:/Git/pool-forum",
-            "options": {
-                "symlink": true
-            }
-        }
-    ],
+    "repositories": [],
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan vendor:publish --force --tag=livewire:assets --ansi",
-            "@php artisan package:discover --ansi",
-            "@php artisan filament:upgrade"
+            "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
