--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-curl": "*",
         "ext-pdo": "*",
         "ably/laravel-broadcaster": "^1.0",
-        "aws/aws-sdk-php": "3.305.4",
+        "aws/aws-sdk-php": "3.332",
         "aws/aws-sdk-php-laravel": "^3.8",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/breeze": "^2.0",
         "laravel/folio": "^1.1",
         "laravel/framework": "^11.0",
+        "laravel/reverb": "^1.4",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
