--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
         "@tailwindcss/typography": "^0.5.10",
         "autoprefixer": "^10.4.17",
         "axios": "^1.6",
+        "laravel-echo": "^1.16.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.35",
         "postcss-nesting": "^12.0.2",
         "prettier": "^3.2.5",
+        "pusher-js": "^8.4.0-rc2",
         "tailwindcss": "^3.4.1",
-        "vite": "^5.0"
-    },
-    "dependencies": {
-        "@ably/laravel-echo": "^1.0.3",
-        "ably": "^1.2.45"
+        "vite": "^6.0"
     }
 }
