--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.2",
         "ext-curl": "*",
         "ext-pdo": "*",
+        "ably/ably-php": "^1.1",
         "ably/laravel-broadcaster": "^1.0",
         "aws/aws-sdk-php": "3.332",
         "aws/aws-sdk-php-laravel": "^3.8",
