--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
         "pusher-js": "^8.4.0-rc2",
         "tailwindcss": "^3.4.1",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "@ably/laravel-echo": "^1.0.6",
+        "ably": "^1.2.50"
     }
 }
