--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "nunomaduro/collision": "^8.1",
         "pestphp/pest": "^2.34",
         "pestphp/pest-plugin-laravel": "^2.4",
+        "larastan/larastan": "^2.0",
         "spatie/laravel-ignition": "^2.5"
     },
     "autoload": {
