--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "laravel/tinker": "^2.10",
         "livewire/livewire": "^3.6",
         "livewire/volt": "^1.7",
+        "predis/predis": "^2.3",
         "wire-elements/modal": "^2.0"
     },
     "require-dev": {
