--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "php": "^8.2",
         "ext-curl": "*",
-        "ext-pdo": "*",
+        "ext-pdo": "*",,
+        "ext-zip": "*",
         "ably/laravel-broadcaster": "^1.0",
         "aws/aws-sdk-php": "3.342.1",
         "aws/aws-sdk-php-laravel": "^3.10",
@@ -24,6 +25,7 @@
         "livewire/livewire": "^3.6",
         "livewire/volt": "^1.7",
         "predis/predis": "^2.3",
+        "spatie/laravel-backup": "^9.2",
         "wire-elements/modal": "^2.0"
     },
     "require-dev": {
