--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "guzzlehttp/guzzle": "^7.9",
         "laravel/breeze": "^2.3",
         "laravel/folio": "^1.1",
-        "laravel/framework": "^11.0",
+        "laravel/framework": "^12.0",
         "laravel/reverb": "^1.4",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10",
@@ -33,13 +33,14 @@
         "barryvdh/laravel-debugbar": "^3.13",
         "barryvdh/laravel-ide-helper": "^3.0",
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^3.4",
         "laravel/pint": "^1.15",
         "laravel/sail": "^1.29",
         "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.1",
-        "pestphp/pest": "^2.34",
-        "pestphp/pest-plugin-laravel": "^2.4",
-        "larastan/larastan": "^2.0",
+        "nunomaduro/collision": "^8.8",
+        "pestphp/pest": "^3.0",
+        "pestphp/pest-plugin-laravel": "^3.0",
+        "phpunit/phpunit": "^11.0",
         "spatie/laravel-ignition": "^2.5"
     },
     "autoload": {
