--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "ably/laravel-broadcaster": "^1.0",
         "aws/aws-sdk-php": "3.342.1",
         "aws/aws-sdk-php-laravel": "^3.10",
+        "erag/laravel-pwa": "^1.9",
         "guzzlehttp/guzzle": "^7.9",
         "laravel/breeze": "^2.3",
         "laravel/folio": "^1.1",
