--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,41 +1,22 @@
 {
- "name": "App",
- "icons": [
-  {
-   "src": "\/android-icon-36x36.png",
-   "sizes": "36x36",
-   "type": "image\/png",
-   "density": "0.75"
-  },
-  {
-   "src": "\/android-icon-48x48.png",
-   "sizes": "48x48",
-   "type": "image\/png",
-   "density": "1.0"
-  },
-  {
-   "src": "\/android-icon-72x72.png",
-   "sizes": "72x72",
-   "type": "image\/png",
-   "density": "1.5"
-  },
-  {
-   "src": "\/android-icon-96x96.png",
-   "sizes": "96x96",
-   "type": "image\/png",
-   "density": "2.0"
-  },
-  {
-   "src": "\/android-icon-144x144.png",
-   "sizes": "144x144",
-   "type": "image\/png",
-   "density": "3.0"
-  },
-  {
-   "src": "\/android-icon-192x192.png",
-   "sizes": "192x192",
-   "type": "image\/png",
-   "density": "4.0"
-  }
- ]
+    "name": "Puerto Galera Billiard League",
+    "short_name": "PG billiard",
+    "background_color": "#fafafa",
+    "display": "fullscreen",
+    "description": "The official app of the Puerto Galera Billiard League. View live scores, match schedules, team standings, and results. The app is a convenient way for players and fans to follow the competition.",
+    "theme_color": "#0cc716",
+    "start_url": "/",
+    "icons": [
+        {
+            "36x36": "D:\\Websites\\pgbilliard\\public\\android-icon-36x36.png",
+            "48x48": "D:\\Websites\\pgbilliard\\public\\android-icon-48x48.png",
+            "72x72": "D:\\Websites\\pgbilliard\\public\\android-icon-72x72.png",
+            "96x96": "D:\\Websites\\pgbilliard\\public\\android-icon-96x96.png",
+            "128x128": "D:\\Websites\\pgbilliard\\public\\android-icon-128x128.png",
+            "144x144": "D:\\Websites\\pgbilliard\\public\\android-icon-144x144.png",
+            "192x192": "D:\\Websites\\pgbilliard\\public\\android-icon-192x192.png",
+            "384x384": "D:\\Websites\\pgbilliard\\public\\android-icon-384x384.png",
+            "512x512": "D:\\Websites\\pgbilliard\\public\\android-icon-512x512.png"
+        }
+    ]
 }
