--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "postcss-nesting": "^13.0",
         "prettier": "^3.2.5",
         "pusher-js": "^8.4.0-rc2",
+        "stylelint": "^16.24.0",
+        "stylelint-config-standard": "^39.0.0",
         "tailwindcss": "^3.4.1",
         "vite": "^7.0"
     },
