--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "laravel-vite-plugin": "^2.0",
         "postcss": "^8.4.35",
         "postcss-nesting": "^13.0",
-        "prettier": "^3.2.5",
+        "prettier": "3.6.2",
+        "prettier-plugin-blade": "^2.1.21",
+        "prettier-plugin-tailwindcss": "^0.6.14",
         "pusher-js": "^8.4.0-rc2",
         "stylelint": "^16.24.0",
         "stylelint-config-standard": "^39.0.0",
