--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "stylelint": "^16.24.0",
         "stylelint-config-standard": "^39.0.0",
         "tailwindcss": "^3.4.1",
-        "vite": "^7.0"
+        "vite": "^7.0",
+        "vite-plugin-preload": "^0.4.4"
     },
     "dependencies": {
         "@ably/laravel-echo": "^1.0.6",
