--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,15 +8,205 @@
     "start_url": "/",
     "icons": [
         {
-            "36x36": "./android-icon-36x36.png",
-            "48x48": "./android-icon-48x48.png",
-            "72x72": "./android-icon-72x72.png",
-            "96x96": "./android-icon-96x96.png",
-            "128x128": "./android-icon-128x128.png",
-            "144x144": "./android-icon-144x144.png",
-            "192x192": "./android-icon-192x192.png",
-            "384x384": "./android-icon-384x384.png",
-            "512x512": "./android-icon-512x512.png"
+            "src": "/favicon.ico",
+            "type": "image/x-icon",
+            "sizes": "16x16 32x32"
+        },
+        {
+            "src": "/icon-192.png",
+            "type": "image/png",
+            "sizes": "192x192"
+        },
+        {
+            "src": "/icon-512.png",
+            "type": "image/png",
+            "sizes": "512x512"
+        },
+        {
+            "src": "/icon-192-maskable.png",
+            "type": "image/png",
+            "sizes": "192x192",
+            "purpose": "maskable"
+        },
+        {
+            "src": "/icon-512-maskable.png",
+            "type": "image/png",
+            "sizes": "512x512",
+            "purpose": "maskable"
+        },
+        {
+            "src": "./android-icon-36x36.png",
+            "sizes": "36x36",
+            "type": "image/png",
+            "density": "0.75"
+        },
+        {
+            "src": "./android-icon-48x48.png",
+            "sizes": "48x48",
+            "type": "image/png",
+            "density": "1.0"
+        },
+        {
+            "src": "./android-icon-72x72.png",
+            "sizes": "72x72",
+            "type": "image/png",
+            "density": "1.5"
+        },
+        {
+            "src": "./android-icon-96x96.png",
+            "sizes": "96x96",
+            "type": "image/png",
+            "density": "2.0"
+        },
+        {
+            "src": "./android-icon-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png",
+            "density": "3.0"
+        },
+        {
+            "src": "./android-icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "density": "4.0"
+        },
+        {
+            "src": "./android-icon-384x384.png",
+            "sizes": "384x384",
+            "type": "image/png",
+            "density": "4.0"
+        },
+        {
+            "src": "./android-icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "density": "4.0"
+        },
+        {
+            "filename": "AppIcon@2x.png",
+            "idiom": "iphone",
+            "scale": "2x",
+            "size": "60x60"
+        },
+        {
+            "filename": "AppIcon@3x.png",
+            "idiom": "iphone",
+            "scale": "3x",
+            "size": "60x60"
+        },
+        {
+            "filename": "AppIcon~ipad.png",
+            "idiom": "ipad",
+            "scale": "1x",
+            "size": "76x76"
+        },
+        {
+            "filename": "AppIcon@2x~ipad.png",
+            "idiom": "ipad",
+            "scale": "2x",
+            "size": "76x76"
+        },
+        {
+            "filename": "AppIcon-83.5@2x~ipad.png",
+            "idiom": "ipad",
+            "scale": "2x",
+            "size": "83.5x83.5"
+        },
+        {
+            "filename": "AppIcon-40@2x.png",
+            "idiom": "iphone",
+            "scale": "2x",
+            "size": "40x40"
+        },
+        {
+            "filename": "AppIcon-40@3x.png",
+            "idiom": "iphone",
+            "scale": "3x",
+            "size": "40x40"
+        },
+        {
+            "filename": "AppIcon-40~ipad.png",
+            "idiom": "ipad",
+            "scale": "1x",
+            "size": "40x40"
+        },
+        {
+            "filename": "AppIcon-40@2x~ipad.png",
+            "idiom": "ipad",
+            "scale": "2x",
+            "size": "40x40"
+        },
+        {
+            "filename": "AppIcon-20@2x.png",
+            "idiom": "iphone",
+            "scale": "2x",
+            "size": "20x20"
+        },
+        {
+            "filename": "AppIcon-20@3x.png",
+            "idiom": "iphone",
+            "scale": "3x",
+            "size": "20x20"
+        },
+        {
+            "filename": "AppIcon-20~ipad.png",
+            "idiom": "ipad",
+            "scale": "1x",
+            "size": "20x20"
+        },
+        {
+            "filename": "AppIcon-20@2x~ipad.png",
+            "idiom": "ipad",
+            "scale": "2x",
+            "size": "20x20"
+        },
+        {
+            "filename": "AppIcon-29.png",
+            "idiom": "iphone",
+            "scale": "1x",
+            "size": "29x29"
+        },
+        {
+            "filename": "AppIcon-29@2x.png",
+            "idiom": "iphone",
+            "scale": "2x",
+            "size": "29x29"
+        },
+        {
+            "filename": "AppIcon-29@3x.png",
+            "idiom": "iphone",
+            "scale": "3x",
+            "size": "29x29"
+        },
+        {
+            "filename": "AppIcon-29~ipad.png",
+            "idiom": "ipad",
+            "scale": "1x",
+            "size": "29x29"
+        },
+        {
+            "filename": "AppIcon-29@2x~ipad.png",
+            "idiom": "ipad",
+            "scale": "2x",
+            "size": "29x29"
+        },
+        {
+            "filename": "AppIcon-60@2x~car.png",
+            "idiom": "car",
+            "scale": "2x",
+            "size": "60x60"
+        },
+        {
+            "filename": "AppIcon-60@3x~car.png",
+            "idiom": "car",
+            "scale": "3x",
+            "size": "60x60"
+        },
+        {
+            "filename": "AppIcon~ios-marketing.png",
+            "idiom": "ios-marketing",
+            "scale": "1x",
+            "size": "1024x1024"
         }
     ]
 }
