--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "barryvdh/laravel-debugbar": "^3.13",
         "barryvdh/laravel-ide-helper": "^3.0",
         "fakerphp/faker": "^1.23",
+        "knuckleswtf/scribe": "^5.5",
         "larastan/larastan": "^3.4",
         "laravel/pint": "^1.15",
         "laravel/sail": "^1.29",
