--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@prettier/plugin-php": "^0.24.0",
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.10",
         "autoprefixer": "^10.4.17",
@@ -14,7 +15,7 @@
         "laravel-vite-plugin": "^2.0",
         "postcss": "^8.4.35",
         "postcss-nesting": "^13.0",
-        "prettier": "3.7.3",
+        "prettier": "^3.7.3",
         "prettier-plugin-blade": "^2.1.21",
         "prettier-plugin-tailwindcss": "^0.7.0",
         "pusher-js": "^8.4.0-rc2",
