--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "@prettier/plugin-php": "^0.24.0",
         "@tailwindcss/forms": "^0.5.7",
+        "@tailwindcss/postcss": "^4.1.17",
         "@tailwindcss/typography": "^0.5.10",
         "autoprefixer": "^10.4.17",
         "axios": "^1.6",
