--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "@ably/laravel-echo": "^1.0.6",
+        "@tailwindcss/vite": "^4.1.17",
         "ably": "^1.2.50"
     }
 }
