--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -28,6 +28,11 @@ jobs:
         restore-keys: ${{ runner.os }}-composer-
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+    - name: Create storage directories
+      run: |
+        mkdir -p storage/framework/{sessions,views,cache}
+        mkdir -p storage/logs
+        mkdir -p bootstrap/cache
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
