--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -30,7 +30,9 @@ jobs:
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Create storage directories
       run: |
-        mkdir -p storage/framework/{sessions,views,cache}
+        mkdir -p storage/framework/sessions
+        mkdir -p storage/framework/views
+        mkdir -p storage/framework/cache/data
         mkdir -p storage/logs
         mkdir -p bootstrap/cache
     - name: Generate key
