--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -27,7 +27,7 @@ jobs:
         key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
         restore-keys: ${{ runner.os }}-composer-
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist --optimize-autoloader
     - name: Create storage directories
       run: |
         mkdir -p storage/framework/sessions
@@ -36,6 +36,8 @@ jobs:
         mkdir -p storage/logs
         mkdir -p bootstrap/cache
         chmod -R 775 storage
+    - name: Check permissions
+      run: ls -la storage/framework
     - name: Set permissions for artisan
       run: chmod +x artisan
     - name: Generate key
