--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -19,7 +19,7 @@ jobs:
         extensions: redis, pdo_mysql, mbstring, xml, curl, zip, bcmath
         coverage: none
     - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      run: php -r "file_exists('.env') || copy('.env.testing', '.env');"
     - name: Cache Composer dependencies
       uses: actions/cache@v3
       with:
