Update testing environment configuration in .env.testing file

--- a/.env.testing
+++ b/.env.testing
@@ -1,8 +1,18 @@
 APP_NAME=PGbilliard
-APP_ENV=local
+APP_ENV=testing
 APP_KEY="base64:eXa/8dp/fvkvJpweB3w+IfcltVqCJCtzoxBygqMw6YY="
 APP_URL=https://pgbilliard.app
 APP_DEBUG=true
 
 DB_CONNECTION=sqlite
+DB_DATABASE=":memory:"
 DB_HOST=127.0.0.1
+
+BROADCAST_DRIVER=log
+BCRYPT_ROUNDS=4
+CACHE_DRIVER=array
+FILESYSTEM_DISK=local
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=array
+SESSION_LIFETIME=120
+MAIL_MAILER=array
