--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,19 +13,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+    - uses: shivammathur/setup-php@v2
       with:
         php-version: '8.3'
         extensions: redis, pdo_mysql, mbstring, xml, curl, zip, bcmath
+        ini-values: error_reporting=E_ALL
+        tools: composer:v2
         coverage: none
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.testing', '.env');"
-    - name: Cache Composer dependencies
-      uses: actions/cache@v3
-      with:
-        path: vendor
-        key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-        restore-keys: ${{ runner.os }}-composer-
     - name: Create storage directories
       run: |
         mkdir -p storage/framework/sessions
@@ -33,7 +29,7 @@ jobs:
         mkdir -p storage/framework/cache/data
         mkdir -p storage/logs
         mkdir -p bootstrap/cache
-        chmod -R 775 storage
+        chmod -R 777 storage
     - name: Check permissions
       run: ls -la storage/framework
     - name: Install Dependencies
