--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,6 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - uses: shivammathur/setup-php@v2
       with:
         php-version: '8.3'
@@ -20,8 +21,10 @@ jobs:
         ini-values: error_reporting=E_ALL
         tools: composer:v2
         coverage: none
+
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.testing', '.env');"
+
     - name: Create storage directories
       run: |
         mkdir -p storage/framework/sessions
@@ -30,22 +33,32 @@ jobs:
         mkdir -p storage/logs
         mkdir -p bootstrap/cache
         chmod -R 777 storage
+
     - name: Check permissions
       run: ls -la storage/framework
+
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist --optimize-autoloader
+
     - name: Set permissions for artisan
       run: chmod +x artisan
+
     - name: Generate key
       run: php artisan key:generate
+
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
+
     - name: Create Database
       run: |
         mkdir -p database
         touch database/database.sqlite
+
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
-      run: php artisan test
+      run: php artisan test --testsuite=Feature
+
+    - name: Static Pint Tests
+      run: vendor/bin/pint --test
